# clai

./: Cargo.toml  README.md  README.org
crates/cli/: Cargo.toml
crates/cli/src/: file.rs  lib.rs
crates/core/: main.rs
crates/openai/: Cargo.toml
crates/openai/src/: lib.rs
crates/parse/: Cargo.toml
crates/print/: Cargo.toml
crates/request/: Cargo.toml
crates/token/: Cargo.toml
crates/token/src/: bpe.rs  lib.rs
