[package]
name = "openai-cli"
version = "0.1.0"
authors = ["Sohaib Mahmood <smahmood@tutanota.com>"]
description = """
Utilities for search oriented command line applications.
"""
keywords = ["openai", "chatgpt"]
edition = "2021"


[dependencies]
openai-token = { path = "../token" }
atty = "0.2.14"
same-file = "1.0.6"
