[package]
name = "openai"
version = "0.1.0"
authors = ["Sohaib Mahmood <smahmood@tutanota.com>"]
description = """
OpenAI Interaction library
"""
keywords = ["openai", "chatgpt"]
edition = "2021"


[dependencies]
openai-token = { path = "../token" }
openai-cli = { path = "../cli" }
openai-parse = { path = "../parse" }
openai-print = { path = "../print" }
openai-request = { path = "../request" }
