[package]
name = "openai-token"
version = "0.1.0"
authors = ["Sohaib Mahmood <smahmood@tutanota.com>"]
description = """
OpenAI token calculator library
"""
keywords = ["openai", "token", "chatgpt"]
edition = "2021"


[dependencies]
fancy-regex = "0.11.0"
regex = "1.7.0"
rustc-hash = "1.1.0"
bstr = "1.0.1"
ureq = "2.6.2"
base64 = "0.21.0"
rayon = "1.7.0"
